--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,25 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;800&display=swap');
 
-*{
-    font-family: 'Nunito', sans-serif;
-}
-
-.container{
-    margin: 30px auto;
-    max-width: 800px;
-}
-
-.data{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px;
-}
-
-.data-body{
-    background-color: #292929;
-    height: 100%;
-}
-
+*{font-family: 'Nunito', sans-serif;}
+.container{margin: 30px auto;max-width: 800px;}
+.data{display: flex;flex-wrap: wrap;padding: 10px;}
+.data-body{background-color: #292929;height: 100%;}
 .data-card{
     width: 230px;
     border: 1px solid #ccc;
@@ -28,10 +12,7 @@
     overflow: hidden;
     transition: 0.7s;
 }
-
-.data-card:hover{
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-}
+.data-card:hover{box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);}
 
 .data-body-title{
     margin: 0;
@@ -51,13 +32,7 @@
     padding-left: 0px;
     padding: 20px;
 }
-
-.data-title{
-    position: relative;
-    height: 180px;
-    overflow: hidden;
-}
-
+.data-title{position: relative;height: 180px;overflow: hidden;}
 .data-title-img{
     height: 150px;
     padding: 25px;
@@ -70,24 +45,10 @@
     transition: 0.7s;
 }
 
-.data-title-img:hover{
-    opacity: 1;
-}
-
-.pagination{
-    display: flex;
-    justify-content: center;
-}
-
-.pagination-list{
-    list-style: none;
-    padding-left: 0;
-    display: inline-flex;
-}
-
-.pagination-item{
-    margin-left: -1px;
-}
+.data-title-img:hover{opacity: 1;}
+.pagination{display: flex;justify-content: center;}
+.pagination-list{list-style: none;padding-left: 0;display: inline-flex;}
+.pagination-item{margin-left: -1px;}
 
 .pagination-url{
     padding: 8px;
